about.index is added and changes were made in index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>hello </title>
 </head>
+
 <body>
-		<h1>Hello world</h1>
-		<h1> Pranjali Pathak </h1>
-		<h1>Baniyatar</h1>
-		<h2>Dont worry , be happy</h2>
+	<h1>Hello world</h1>
+	<h1> Pranjali Pathak </h1>
+	<h1>Baniyatar</h1>
+	<h2>Dont worry , be happy</h2>
+	<h1>MY NAME IS SUNIL KHADKA</h1>
 </body>
+
 </html>
